--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npx babel-node server.js"
+    "start": "npx babel-node server.js",
+    "monitor": "nodemon --watch '**.*' --exec npm start"
   },
   "author": "Godbell & GulSauce",
   "license": "MIT",
@@ -17,7 +18,7 @@
     "express-asyncify": "2.1.2",
     "mongodb": "6.3.0",
     "mongoose": "8.0.3",
-    "multer": "2.0.0-rc.4",
+    "multer": "1.4.5-lts.1",
     "multer-s3": "3.0.1",
     "passport": "0.7.0",
     "passport-kakao": "1.0.1",
