--- a/package.json
+++ b/package.json
@@ -12,17 +12,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.470.0",
     "@aws-sdk/credential-provider-env": "3.468.0",
+    "@aws-sdk/lib-storage": "^3.485.0",
     "busboy": "1.6.0",
     "cookie-parser": "1.4.6",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-asyncify": "2.1.2",
-    "form-data": "4.0.0",
     "mongodb": "6.3.0",
     "mongoose": "8.0.3",
-    "multer": "1.4.5-lts.1",
-    "multer-s3": "3.0.1",
-    "node-fetch-commonjs": "3.3.2",
     "passport": "0.7.0",
     "passport-kakao": "1.0.1",
     "pg": "8.11.3",
