--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.470.0",
     "@aws-sdk/credential-provider-env": "3.468.0",
-    "@aws-sdk/lib-storage": "^3.485.0",
+    "@aws-sdk/lib-storage": "3.485.0",
     "busboy": "1.6.0",
     "cookie-parser": "1.4.6",
     "dotenv": "16.3.1",
