--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-asyncify": "2.1.2",
+    "express-ws": "5.0.2",
     "mongodb": "6.3.0",
     "mongoose": "8.0.3",
     "passport": "0.7.0",
