--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,9 @@
       "@utility/*": ["utility/*"],
       "@model/*": ["model/*"],
       "@database/*": ["database/*"],
-      "@middleware/*": ["middleware/*"]
+      "@middleware/*": ["middleware/*"],
+      "@socket/*": ["socket/*"],
+      "@game/*": ["game/*"]
     }
   },
   "exclude": ["node_modules"]
