--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-asyncify": "2.1.2",
-    "express-ws": "5.0.2",
     "mongodb": "6.3.0",
     "mongoose": "8.0.3",
     "passport": "0.7.0",
     "passport-kakao": "1.0.1",
     "pg": "8.11.3",
     "redis": "4.6.11",
-    "uuid": "9.0.1",
-    "ws": "8.15.0"
+    "socket.io": "4.7.4",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@babel/cli": "7.23.4",
