--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "ES6",
+    "module": "CommonJS",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"],
@@ -10,7 +12,8 @@
       "@middleware/*": ["middleware/*"],
       "@socket/*": ["socket/*"],
       "@game/*": ["game/*"]
-    }
+    },
+    "checkJs": true
   },
   "exclude": ["node_modules"]
 }
