--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.0",
+    "lerna": "^8.0.2",
     "prettier": "3.1.1"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
