Document: correct author and repo data

--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -2,8 +2,8 @@
   "name": "mongodb",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "author": "Godbell <12191579@inha.edu>",
-  "homepage": "https://github.com/Godbell/kkujjang-backend#readme",
+  "author": "Godbell & GulSauce",
+  "homepage": "https://github.com/Stageus/kkujjang-backend#readme",
   "license": "ISC",
   "main": "lib/mongodb.js",
   "directories": {
@@ -14,13 +14,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Godbell/kkujjang-backend.git"
+    "url": "git+https://github.com/Stageus/kkujjang-backend.git"
   },
   "scripts": {
     "start": "node ./lib/mongodb.js"
   },
   "type": "module",
   "bugs": {
-    "url": "https://github.com/Godbell/kkujjang-backend/issues"
+    "url": "https://github.com/Stageus/kkujjang-backend/issues"
   }
 }
