--- a/packages/postgres/package.json
+++ b/packages/postgres/package.json
@@ -1,24 +1,18 @@
 {
   "name": "postgres",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "Godbell <12191579@inha.edu>",
   "homepage": "https://github.com/Godbell/kkujjang-backend#readme",
   "license": "ISC",
-  "main": "lib/postgres.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "files": [
-    "lib"
-  ],
+  "main": "index.js",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Godbell/kkujjang-backend.git"
   },
   "scripts": {
-    "start": "node ./lib/postgres.js"
+    "start": "node index"
   },
   "bugs": {
     "url": "https://github.com/Godbell/kkujjang-backend/issues"
