--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start:game-server": "npx nx start kkujjang-game-server",
     "start:api-server": "npx nx start kkujjang-api-server",
-    "start": "npx nx  run-many --target=start"
+    "start": "npx nx  run-many --target=start",
+    "docker-compose:dev": "docker compose -f docker-compose.dev.yaml up -d",
+    "docker-compose:prod": "docker compose -f docker-compose.prod.yaml up -d",
+    "docker-compose:down": "docker compose down"
   },
   "author": "Godbell & GulSauce",
   "license": "MIT",
