--- a/packages/kkujjang-game-server/package.json
+++ b/packages/kkujjang-game-server/package.json
@@ -12,7 +12,8 @@
     "cookie-parser": "1.4.6",
     "express": "4.18.2",
     "socket.io": "4.7.4",
-    "kkujjang-session": "*"
+    "kkujjang-session": "*",
+    "kkujjang-validation": "*"
   },
   "type": "module",
   "imports": {
