Feat: create chat load

--- a/packages/kkujjang-api-server/package.json
+++ b/packages/kkujjang-api-server/package.json
@@ -18,7 +18,8 @@
     "postgres": "*",
     "redis-cli": "*",
     "kkujjang-session": "*",
-    "kkujjang-validation": "*"
+    "kkujjang-validation": "*",
+    "logger": "*"
   },
   "type": "module",
   "imports": {
