--- a/packages/kkujjang-game-server/package.json
+++ b/packages/kkujjang-game-server/package.json
@@ -13,7 +13,8 @@
     "express": "4.18.2",
     "socket.io": "4.7.4",
     "kkujjang-session": "*",
-    "kkujjang-validation": "*"
+    "kkujjang-validation": "*",
+    "logger": "*"
   },
   "type": "module",
   "imports": {
