--- a/packages/logger/jsconfig.json
+++ b/packages/logger/jsconfig.json
@@ -4,7 +4,7 @@
     "module": "es2022",
     "baseUrl": "./",
     "paths": {
-      "#model/*": ["src/model/*"]
+      "#model/*": ["../mongo-pool/model/*"]
     }
   },
   "exclude": ["node_modules"]
