--- a/packages/kkujjang-api-server/package.json
+++ b/packages/kkujjang-api-server/package.json
@@ -13,19 +13,18 @@
     "express": "4.18.2",
     "express-asyncify": "2.1.2",
     "kkujjang-multer": "*",
-    "mongo-pool": "*",
     "node-schedule": "2.1.1",
     "postgres": "*",
     "redis-cli": "*",
     "kkujjang-session": "*",
-    "kkujjang-validation": "*"
+    "kkujjang-validation": "*",
+    "logger": "*"
   },
   "type": "module",
   "imports": {
     "#src/*": "./src/*.js",
     "#router/*": "./src/router/*.js",
     "#utility/*": "./src/utility/*.js",
-    "#model/*": "./src/model/*.js",
     "#middleware/*": "./src/middleware/*.js",
     "#root/*": "./*.js"
   }
