Feat: ban router skeleton

--- a/packages/kkujjang-api-server/package.json
+++ b/packages/kkujjang-api-server/package.json
@@ -18,7 +18,8 @@
     "redis-cli": "*",
     "kkujjang-session": "*",
     "kkujjang-validation": "*",
-    "logger": "*"
+    "logger": "*",
+    "rabbitmq": "*"
   },
   "type": "module",
   "imports": {
