--- a/packages/kkujjang-game-server/jsconfig.json
+++ b/packages/kkujjang-game-server/jsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "#game/*": ["src/game/*"],
       "#socket/*": ["src/socket/*"],
-      "#utility/*": ["src/utility/*"]
+      "#utility/*": ["src/utility/*"],
+      "#channel/*": ["src/channel/*.js"]
     },
     "checkJs": true
   },
