--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -17,11 +17,11 @@ services:
       - $PGPORT:$PGPORT
 
   mongodb:
+    container_name: kkujjang-mongodb
     env_file:
       - .env
     environment:
       - MONGO_INITDB_DATABASE=kkujjang_test
-    container_name: kkujjang-mongodb
     volumes:
       - ./data/mongodb/:/docker-entrypoint-initdb.d/mongo-init.js:ro
     image: mongo:latest
@@ -33,9 +33,9 @@ services:
       - $MONGODB_PORT:$MONGODB_PORT
 
   redis:
+    container_name: kkujjang-redis
     env_file:
       - .env
-    container_name: kkujjang-redis
     image: redis/redis-stack-server:latest
     restart: always
     command: redis-server --requirepass $REDIS_PASSWORD --port $REDIS_PORT
@@ -44,7 +44,23 @@ services:
     ports:
       - $REDIS_PORT:$REDIS_PORT
 
+  rabbitmq:
+    container_name: kkujjang-rabbitmq
+    env_file:
+      - .env
+    environment:
+      RABBITMQ_DEFAULT_USER: $RABBITMQ_DEFAULT_USER
+      RABBITMQ_DEFAULT_PASS: $RABBITMQ_DEFAULT_PASS
+    image: rabbitmq:3.12.4-management-alpine
+    restart: always
+    tty: true
+    stdin_open: true
+    ports:
+      - $RABBITMQ_PORT:5672
+      - $RABBITMQ_MANAGER_PORT:15672
+
   api:
+    container_name: kkujjang-api-server
     env_file:
       - .env
     environment:
@@ -52,7 +68,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.api
-    container_name: kkujjang-api-server
     image: kkujjang-api-server:latest
     restart: always
     tty: true
@@ -65,6 +80,7 @@ services:
       - $HTTPS_PORT:$HTTPS_PORT
 
   game:
+    container_name: kkujjang-game-server
     env_file:
       - .env
     environment:
@@ -72,7 +88,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.game
-    container_name: kkujjang-game-server
     image: kkujjang-game-server:latest
     restart: always
     tty: true
