--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -7,6 +7,7 @@ services:
       - .env
     environment:
       - POSTGRES_DB=kkujjang_test
+      - TZ=$TIME_ZONE
     image: postgres:latest
     volumes:
       - ./data/postgres/:/docker-entrypoint-initdb.d/
@@ -22,6 +23,7 @@ services:
       - .env
     environment:
       - MONGO_INITDB_DATABASE=kkujjang_test
+      - TZ=$TIME_ZONE
     volumes:
       - ./data/mongodb/:/docker-entrypoint-initdb.d/mongo-init.js:ro
     image: mongo:latest
@@ -36,6 +38,8 @@ services:
     container_name: kkujjang-redis
     env_file:
       - .env
+    environment:
+      - TZ=$TIME_ZONE
     image: redis/redis-stack-server:latest
     restart: always
     command: redis-server --requirepass $REDIS_PASSWORD --port $REDIS_PORT
@@ -49,8 +53,9 @@ services:
     env_file:
       - .env
     environment:
-      RABBITMQ_DEFAULT_USER: $RABBITMQ_DEFAULT_USER
-      RABBITMQ_DEFAULT_PASS: $RABBITMQ_DEFAULT_PASS
+      - RABBITMQ_DEFAULT_USER=$RABBITMQ_DEFAULT_USER
+      - RABBITMQ_DEFAULT_PASS=$RABBITMQ_DEFAULT_PASS
+      - TZ=$TIME_ZONE
     image: rabbitmq:3.12.4-management-alpine
     restart: always
     tty: true
@@ -65,6 +70,7 @@ services:
       - .env
     environment:
       - NODE_ENV=dev
+      - TZ=$TIME_ZONE
     build:
       context: .
       dockerfile: Dockerfile.api
@@ -85,6 +91,7 @@ services:
       - .env
     environment:
       - NODE_ENV=dev
+      - TZ=$TIME_ZONE
     build:
       context: .
       dockerfile: Dockerfile.game
