--- a/packages/kkujjang-game-server/package.json
+++ b/packages/kkujjang-game-server/package.json
@@ -14,6 +14,7 @@
     "socket.io": "4.7.4",
     "kkujjang-session": "*",
     "kkujjang-validation": "*",
+    "postgres": "*",
     "logger": "*"
   },
   "type": "module",
