--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -4,9 +4,9 @@ services:
   postgres:
     container_name: kkujjang-postgres
     env_file:
-      - .env
+      - .env.prod
     environment:
-      - POSTGRES_DB=kkujjang_test
+      - POSTGRES_DB=kkujjang
       - TZ=$TIME_ZONE
     image: postgres:latest
     volumes:
@@ -20,9 +20,9 @@ services:
   mongodb:
     container_name: kkujjang-mongodb
     env_file:
-      - .env
+      - .env.prod
     environment:
-      - MONGO_INITDB_DATABASE=kkujjang_test
+      - MONGO_INITDB_DATABASE=kkujjang
       - TZ=$TIME_ZONE
     volumes:
       - ./data/mongodb/:/docker-entrypoint-initdb.d/mongo-init.js:ro
@@ -37,7 +37,7 @@ services:
   redis:
     container_name: kkujjang-redis
     env_file:
-      - .env
+      - .env.prod
     environment:
       - TZ=$TIME_ZONE
     image: redis/redis-stack-server:latest
@@ -51,7 +51,7 @@ services:
   rabbitmq:
     container_name: kkujjang-rabbitmq
     env_file:
-      - .env
+      - .env.prod
     environment:
       - RABBITMQ_DEFAULT_USER=$RABBITMQ_DEFAULT_USER
       - RABBITMQ_DEFAULT_PASS=$RABBITMQ_DEFAULT_PASS
@@ -67,7 +67,7 @@ services:
   api:
     container_name: kkujjang-api-server
     env_file:
-      - .env
+      - .env.prod
     environment:
       - NODE_ENV=production
       - TZ=$TIME_ZONE
@@ -88,7 +88,7 @@ services:
   game:
     container_name: kkujjang-game-server
     env_file:
-      - .env
+      - .env.prod
     environment:
       - NODE_ENV=production
       - TZ=$TIME_ZONE
