--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,12 +2,12 @@ version: '0.1'
 
 services:
   postgres:
-    container_name: kkujjang-postgres
     env_file:
       - .env.prod
     environment:
       - POSTGRES_DB=kkujjang
       - TZ=$TIME_ZONE
+    container_name: $POSTGRES_HOST
     image: postgres:latest
     volumes:
       - ./data/postgres/:/docker-entrypoint-initdb.d/
@@ -18,12 +18,12 @@ services:
       - $PGPORT:$PGPORT
 
   mongodb:
-    container_name: kkujjang-mongodb
     env_file:
       - .env.prod
     environment:
       - MONGO_INITDB_DATABASE=kkujjang
       - TZ=$TIME_ZONE
+    container_name: $MONGODB_HOST
     volumes:
       - ./data/mongodb/:/docker-entrypoint-initdb.d/mongo-init.js:ro
     image: mongo:latest
@@ -35,12 +35,12 @@ services:
       - $MONGODB_PORT:$MONGODB_PORT
 
   redis:
-    container_name: kkujjang-redis
     env_file:
       - .env.prod
     environment:
       - TZ=$TIME_ZONE
     image: redis/redis-stack-server:latest
+    container_name: $REDIS_HOST
     restart: always
     command: redis-server --requirepass $REDIS_PASSWORD --port $REDIS_PORT
     tty: true
@@ -49,13 +49,13 @@ services:
       - $REDIS_PORT:$REDIS_PORT
 
   rabbitmq:
-    container_name: kkujjang-rabbitmq
     env_file:
       - .env.prod
     environment:
       - RABBITMQ_DEFAULT_USER=$RABBITMQ_DEFAULT_USER
       - RABBITMQ_DEFAULT_PASS=$RABBITMQ_DEFAULT_PASS
       - TZ=$TIME_ZONE
+    container_name: $RABBITMQ_HOST
     image: rabbitmq:3.12.4-management-alpine
     restart: always
     tty: true
@@ -81,10 +81,8 @@ services:
     tty: true
     stdin_open: true
     expose:
-      - $HTTP_PORT
       - $HTTPS_PORT
     ports:
-      - $HTTP_PORT:$HTTP_PORT
       - $HTTPS_PORT:$HTTPS_PORT
 
   game:
@@ -104,8 +102,6 @@ services:
     tty: true
     stdin_open: true
     expose:
-      - $WS_PORT
       - $WSS_PORT
     ports:
-      - $WS_PORT:$WS_PORT
       - $WSS_PORT:$WSS_PORT
