--- a/package.json
+++ b/package.json
@@ -4,38 +4,32 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npx babel-node server.js"
+    "start:game-server": "npx nx start kkujjang-game-server",
+    "start:api-server": "npx nx start kkujjang-api-server",
+    "start": "npx nx  run-many --target=start",
+    "docker-compose:build-dev": "docker compose -f docker-compose.dev.yaml build",
+    "docker-compose:build-prod": "docker compose -f docker-compose.prod.yaml build",
+    "docker-compose:dev": "docker compose -f docker-compose.dev.yaml up -d",
+    "docker-compose:prod": "docker compose -f docker-compose.prod.yaml up -d",
+    "docker-compose:down-dev": "docker compose -f docker-compose.dev.yaml down",
+    "docker-compose:down-prod": "docker compose -f docker-compose.prod.yaml down"
   },
   "author": "Godbell & GulSauce",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-s3": "3.470.0",
-    "@aws-sdk/credential-provider-env": "3.468.0",
-    "cookie-parser": "1.4.6",
     "dotenv": "16.3.1",
-    "express": "4.18.2",
-    "express-asyncify": "2.1.2",
-    "mongodb": "6.3.0",
-    "mongoose": "8.0.3",
-    "multer": "2.0.0-rc.4",
-    "multer-s3": "3.0.1",
-    "passport": "0.7.0",
-    "passport-kakao": "1.0.1",
-    "pg": "8.11.3",
-    "redis": "4.6.11",
-    "uuid": "9.0.1",
-    "ws": "8.15.0"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.23.4",
-    "@babel/core": "7.23.5",
-    "@babel/node": "7.22.19",
-    "@babel/preset-env": "7.23.5",
-    "babel-plugin-module-resolver": "5.0.0",
     "eslint": "8.55.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.0",
+    "nx": "17.3.1",
     "prettier": "3.1.1"
-  }
+  },
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
